@@ -7,6 +7,7 @@ version 2.1-alpha XX-Ago-2012
 . [NEW] Tests: Tests for RotationalSkew feature
 . [FIX] LabelBMFont: removed forward declarations for tFontDefHashElement and tKerningHashElement. They are in the header now.
 			Don't assert if character is not found. Just continue with logging the warning.
+. [FIX] LabelTTF: loads custom fonts correctly on Mac
 
 
 version 2.0.0 8-Jul-2012
